fix:修正查询申报详情与驳回重提逻辑